BB-1108 Rename bulk endpoints
